fix: border bleed

--- a/src/ui/collection-card/styles.module.css
+++ b/src/ui/collection-card/styles.module.css
@@ -15,7 +15,7 @@
     width: 20%;
 
     border-radius: 20px;
-    box-shadow: 0 0 0 1px var(--chrome-2);
+    box-shadow: 0 0 0 1px var(--chrome-2) inset;
 
     color: var(--foreground);
 
